--- a/src/sections/Footer/Footer.module.css
+++ b/src/sections/Footer/Footer.module.css
@@ -74,6 +74,8 @@
     width: 200px;
     height: 100%;
     object-fit: cover;
+       z-index: 0;
+       pointer-events: none;
 }
 
 /*
